k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kiddoo
  labels:
    app.kubernetes.io/part-of: kiddoo-platform
